[package]
authors = ["mt-caret"]
categories = ["wasm"]
description = "A simple image editor"
license = "MIT"
name = "simple-image-editor"
readme = "./README.md"
repository = "https://github.com/mt-caret/simple-image-editor"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
rulinalg = "0.4.2"
lazy_static = "1.2.0"
cfg-if = "0.1.5"
wasm-bindgen = "0.2.25"
js-sys = "0.3.6"
rand = "0.6.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "ImageData",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
]

[features]
default-features = ["console_error_panic_hook"]
